# gnf_backend

./: .gitignore  Cargo.toml  README.md
src/: main.rs  upload_file.rs
src/db/: mod.rs  setup.rs
src/db/entities/: mod.rs
src/db/entities/article/: mod.rs
src/db/entities/article_image/: mod.rs
src/db/entities/author/: mod.rs
src/utils/: constants.rs
