[package]
name = "gnf_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
serde = { version = "1.0.189", features = ["derive"] }
tokio = { version = "1.33.0", features = ["fs", "io-util"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
actix-multipart = "0.6.1"
futures = "0.3.29"
